Make KwicComponent potentially safe thread